--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,12 @@
   flex-direction: row;
 }
 
+.left-header-container {
+  display: flex;
+  outline: 2px solid green;
+  width: 1000px;
+}
+
 .share-container {
   display: flex;
   align-items: center;
@@ -47,7 +53,6 @@
 }
 
 .admin-username-2-win {
-  margin-left: 900px;
 }
 
 .all-boxes {
