--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   height: 200vh;
-  overflow: hidden;
+  Margin: 0;
 }
 
 .header {
@@ -106,6 +106,7 @@
   flex-wrap: wrap;
   justify-content: center;
   outline: 3px solid magenta;
+  Margin: 0
 }
 
 
@@ -116,3 +117,15 @@
   outline: 3px solid blue;  
 }
 
+.shares-title-container {
+  display: flex;
+  align-items: center;
+  height: 120px;
+  font-size: 25px;
+  color: #5e5e5e;
+  background-color: #ededed;
+}
+
+h1 {
+  margin-left: 15px;
+}
