--- a/styles.css
+++ b/styles.css
@@ -118,6 +118,7 @@ h1 {
   flex-wrap: wrap;
   justify-content: center;
   outline: 3px solid magenta; 
+  height: 600px;
 }
 
 .each-box {
@@ -133,42 +134,43 @@ h1 {
 .share-solid-arrow {
   height: 70px;
   width: 70px;
-  outline: 2px solid black;
   border-radius: 35px;
+  margin-top: 20px;
+  margin-left: 20px;
+ background-color: white;
 }
 
 .views-and-arrow-container {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-bottom: 60px;
-  outline: 3px solid black;
+  margin-bottom: 85px;
+  height: 240px;
+  outline: 4px solid blue;
+  background-image: url("./assets/professional-woman.png");
+  background-repeat: no-repeat;
 }
 
 .views-container {
   display: flex;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
+  margin-left: 185px;
+  margin-top: 25px;
   outline: 6px solid green;
-
 }
 
 .views {
-  display: flex;
-  margin-bottom: 28px;
   outline: 2px solid black;
-
-  margin-bottom: -16px;;
-  /* color: white; */
+  margin-top: 0px;
+  color: blue;
+  font-size: 22px;
+  font-weight: 600;
 }
 
 .views-number {
   display: flex;
   outline: 2px solid black;
-  margin-top: 38px;
-
-  /* color: white; */
+  color: blue;
   font-size: 35px;
+  font-weight: 900;
 }
+
