Put the boxes into 2 4x4 rows

--- a/styles.css
+++ b/styles.css
@@ -124,6 +124,7 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 330px;
   outline: 3px solid blue;  
   margin-left: 10px;
   margin-right: 10px;
@@ -174,5 +175,5 @@ h1 {
 }
 
 .recipient-and-date {
-  
+
 }
